<resources>
    <string name="About.appName.android">Elephant</string>
    <string name="About.blog">Blog</string>
    <string name="About.footer">Made by the Elaphant Team. Version %1$s Build %2$s</string>
    <string name="About.privacy">Privacy Policy</string>
    <string name="About.reddit">Reddit</string>
    <string name="About.terms">Terms of Use</string>
    <string name="About.title">About</string>
    <string name="About.twitter">Twitter</string>
    <string name="About.walletID">Elephant Rewards ID</string>
    <string name="AccessibilityLabels.close">Close</string>
    <string name="AccessibilityLabels.faq">Support Center</string>
    <string name="Account.balance">Balance</string>
    <string name="Account.exchangeRate">%1$s per %2$s</string>
    <string name="Account.loadingMessage">Loading Wallet</string>
    <string name="AccountHeader.defaultWalletName">My Elephant</string>
    <string name="Alert.customKeyboard.android">It looks like you are using a third-party keyboard, which can record what you type and steal your recovery phrase. Please switch to the default Android keyboard for extra protection.</string>
    <string name="Alert.error">Error</string>
    <string name="Alert.keystore.generic.android">There is a problem with your Android OS keystore, please contact support@elaphant.app</string>
    <string name="Alert.keystore.invalidated.android">Your Elephant encrypted data was recently invalidated because your Android lock screen was disabled.</string>
    <string name="Alert.keystore.title.android">Android KeyStore Error</string>
    <string name="Alert.noInternet">No internet connection found. Check your connection and try again.</string>
    <string name="Alert.warning">Warning</string>
    <string name="Alerts.copiedAddressesHeader">Addresses Copied</string>
    <string name="Alerts.copiedAddressesSubheader">All wallet addresses successfully copied.</string>
    <string name="Alerts.paperKeySet">Recovery Phrase Set</string>
    <string name="Alerts.paperKeySetSubheader">Awesome!</string>
    <string name="Alerts.pinSet">PIN Set</string>
    <string name="Alerts.sendFailure">Send failed</string>
    <string name="Alerts.sendSuccess">Send Confirmation</string>
    <string name="Alerts.sendSuccessSubheader">Money Sent!</string>
    <string name="Alerts.touchIdSucceeded.android">Fingerprint recognized</string>
    <string name="Android.allowFileSystemAccess">Please enable storage permissions in your device settings: \"Settings\" &gt; \"Apps\" &gt; \"Elephant\" &gt; \"Permissions\".</string>
    <string name="Android.BCH.welcome.message">Any BCH in your wallet can be accessed through the home screen.</string>
    <string name="Android.screenAlteringMessage">Elephant will not function properly unless screen-altering apps (such as Twilight) are disabled.</string>
    <string name="Android.screenAlteringTitle">Screen-Altering App Detected</string>
    <string name="ApiClient.jsonError">JSON Serialization Error</string>
    <string name="ApiClient.notReady">Wallet not ready</string>
    <string name="ApiClient.tokenError">Unable to retrieve API token</string>
    <string name="BCH.body">Enter a destination BCH address below. All BCH in your wallet at the time of the fork (%1$s) will be sent.</string>
    <string name="BCH.confirmationMessage">Confirm sending %1$s to %2$s</string>
    <string name="BCH.confirmationTitle">Confirmation</string>
    <string name="BCH.genericError">Your account does not contain any BCH, or you received BCH after the fork.</string>
    <string name="BCH.hashCopiedMessage">Transaction ID copied</string>
    <string name="BCH.noAddressError">Please enter an address</string>
    <string name="BCH.paymentProtocolError">Payment Protocol Requests are not supported for BCH transactions</string>
    <string name="BCH.successMessage">BCH was successfully sent.</string>
    <string name="BCH.title">Withdraw BCH</string>
    <string name="BCH.txHashHeader">BCH Transaction ID</string>
    <string name="BitID.approve">Approve</string>
    <string name="BitID.authenticationRequest">%1$s is requesting authentication using your bitcoin wallet</string>
    <string name="BitID.deny">Deny</string>
    <string name="BitID.error">Authentication Error</string>
    <string name="BitID.errorMessage">Please check with the service. You may need to try again.</string>
    <string name="BitID.success">Successfully Authenticated</string>
    <string name="BitID.title">BitID Authentication Request</string>
    <string name="Button.buy">Buy</string>
    <string name="Button.cancel">Cancel</string>
    <string name="Button.continueAction">Continue</string>
    <string name="Button.dismiss">Dismiss</string>
    <string name="Button.Home">Home</string>
    <string name="Button.ignore">Ignore</string>
    <string name="Button.menu">menu</string>
    <string name="Button.no">No</string>
    <string name="Button.ok">OK</string>
    <string name="Button.receive">Receive</string>
    <string name="Button.sell">Sell</string>
    <string name="Button.send">Send</string>
    <string name="Button.settings">Settings</string>
    <string name="Button.submit">Submit</string>
    <string name="Button.yes">Yes</string>
    <string name="CameraPlugin.centerInstruction">Center your ID in the box</string>
    <string name="Confirmation.amountLabel">Amount to Send</string>
    <string name="Confirmation.feeLabel">Network Fee</string>
    <string name="Confirmation.processingTime">Processing time: This transaction is predicted to complete in %1$s.</string>
    <string name="Confirmation.send">Send</string>
    <string name="Confirmation.title">Confirmation</string>
    <string name="Confirmation.to">To</string>
    <string name="Confirmation.totalLabel">Total Cost</string>
    <string name="ConfirmPaperPhrase.error">The words entered do not match your recovery phrase. Please try again.</string>
    <string name="ConfirmPaperPhrase.label">To make sure everything was written down correctly, please enter the following words from your recovery phrase.</string>
    <string name="ConfirmPaperPhrase.word">Word #%1$s</string>
    <string name="Crowdsale.agree">Agree</string>
    <string name="Crowdsale.buyButton">Buy Tokens</string>
    <string name="Crowdsale.decline">Decline</string>
    <string name="Crowdsale.resume">Resume Verification</string>
    <string name="Crowdsale.retry">Retry</string>
    <string name="DefaultCurrency.bitcoinLabel">Bitcoin Display Unit</string>
    <string name="DefaultCurrency.rateLabel">Exchange Rate</string>
    <string name="Disabled.title">Wallet disabled</string>
    <string name="ErrorMessages.emailUnavailableMessage">This device isn\'t configured to send email with the iOS mail app.</string>
    <string name="ErrorMessages.emailUnavailableTitle">Email Unavailable</string>
    <string name="ErrorMessages.loopingLockScreen.android">Elephant can not be authenticated due to a bug in your version of Android. [Please tap here for more information.]</string>
    <string name="ErrorMessages.messagingUnavailableMessage">This device isn\'t configured to send messages.</string>
    <string name="ErrorMessages.messagingUnavailableTitle">Messaging Unavailable</string>
    <string name="ErrorMessages.touchIdFailed.android">Fingerprint not recognized. Please try again.</string>
    <string name="FaceIDSettings.customizeText">You can customize your Face ID spending limit from the %1$s.</string>
    <string name="FaceIDSettings.label">Use your face to unlock your Elephant and send money up to a set limit.</string>
    <string name="FaceIDSettings.linkText">Face ID Spending Limit Screen</string>
    <string name="FaceIDSettings.switchLabel">Enable Face ID for Elephant</string>
    <string name="FaceIDSettings.title">Face ID</string>
    <string name="FaceIDSettings.unavailableAlertMessage">You have not set up Face ID on this device. Go to Settings-&gt;Face ID &amp; Passcode to set it up now.</string>
    <string name="FaceIDSettings.unavailableAlertTitle">Face ID Not Set Up</string>
    <string name="FaceIDSpendingLimit.title">Face ID Spending Limit</string>
    <string name="FeeSelector.economy">Economy</string>
    <string name="FeeSelector.economyTime">1-24 hours</string>
    <string name="FeeSelector.economyWarning">This option is not recommended for time-sensitive transactions.</string>
    <string name="FeeSelector.estimatedDeliver">Estimated Delivery: %1$s</string>
    <string name="FeeSelector.ethTime">2-5 minutes</string>
    <string name="FeeSelector.regular">Regular</string>
    <string name="FeeSelector.regularTime">10-60 minutes</string>
    <string name="FeeSelector.title">Processing Speed</string>
    <string name="HomeScreen.admin">Admin</string>
    <string name="HomeScreen.buy">Buy Bitcoin</string>
    <string name="HomeScreen.menu">Setting</string>
    <string name="HomeScreen.portfolio">Wallets</string>
    <string name="HomeScreen.totalAssets">Total Assets</string>
    <string name="HomeScreen.trade">My wallet</string>
    <string name="Import.checking">Checking private key balance...</string>
    <string name="Import.confirm">Send %1$s from this private key into your wallet? The bitcoin network will receive a fee of %2$s.</string>
    <string name="Import.Error.duplicate">This private key is already in your wallet.</string>
    <string name="Import.Error.empty">This private key is empty.</string>
    <string name="Import.Error.highFees">Transaction fees would cost more than the funds available on this private key.</string>
    <string name="Import.Error.notValid">Not a valid private key</string>
    <string name="Import.Error.signing">Error signing transaction</string>
    <string name="Import.importButton">Import</string>
    <string name="Import.importing">Importing Wallet</string>
    <string name="Import.leftCaption">Wallet to be imported</string>
    <string name="Import.message">Importing a wallet transfers all the money from your other wallet into your Elephant wallet using a single transaction.</string>
    <string name="Import.password">This private key is password protected.</string>
    <string name="Import.passwordPlaceholder">password</string>
    <string name="Import.rightCaption">Your Elephant Wallet</string>
    <string name="Import.scan">Scan Private Key</string>
    <string name="Import.success">Success</string>
    <string name="vote_title">Voting</string>
    <string name="vote_balance">%1$s ELA</string>
    <string name="vote_wallet_balance_title">Wallet Balance:</string>
    <string name="vote_hint">You only need to pay a little transaction fee: %1$s ELA</string>
    <string name="vote_cancel_btn_txt">Cancel</string>
    <string name="vote_confirm_btn_txt">Confirm</string>
    <string name="node_list_title">Node list of these %1$d nodes:</string>
    <string name="explore_pop_share">Share this App</string>
    <string name="explore_pop_about">About %1$s</string>
    <string name="explore_pop_cancel">Cancel</string>
    <string name="multisign_approved">You have approved the request successfully.</string>
    <string name="multisign_pass_next">Pass the request to next.</string>
    <string name="multisign_share_json">Share file.json</string>
    <string name="multisign_approved_title">Approved</string>
    <string name="txid_copy_tv">Copy</string>
    <string name="My_add_friend">Add friend</string>
    <string name="My_chat_add_device">Add carrier device</string>
    <string name="My_chat_join_group">Join a group</string>
    <string name="My_chat_qr_code">My QR code</string>
    <string name="crc_vote_hint">You are going to vote</string>
    <string name="crc_votes">Votes:(ELA)</string>
    <string name="crc_members_title">CR council members detail:</string>
    <string name="crc_view_all">View all</string>
    <string name="crc_vote_dpos_nodes">%1$d nodes（DPoS）</string>
    <string name="crc_vote_crc_nodes">%1$d council members（CR）</string>
</resources>