<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#33000000">

    <LinearLayout
        android:layout_width="190dp"
        android:layout_height="120dp"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_gravity="right"
        android:layout_marginRight="15dp"
        android:layout_marginTop="50dp">

        <com.breadwallet.presenter.customviews.BaseTextView
            android:id="@+id/chat_add_by_did"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:drawableLeft="@drawable/ic_add_did"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:text="@string/My_add_friend"
            android:textColor="#333333"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.breadwallet.presenter.customviews.BaseTextView
            android:id="@+id/chat_add_by_device"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:drawableLeft="@drawable/ic_add_device"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:text="@string/My_chat_add_device"
            android:textColor="#333333"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.breadwallet.presenter.customviews.BaseTextView
            android:id="@+id/chat_join_group"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:drawableLeft="@drawable/ic_join_group"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:text="@string/My_chat_join_group"
            android:textColor="#333333"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.breadwallet.presenter.customviews.BaseTextView
            android:id="@+id/chat_my_qr"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:drawableLeft="@drawable/ic_chat_qr"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:text="@string/My_chat_qr_code"
            android:textColor="#333333"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>
</FrameLayout>