<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/primary_background">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="20dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:background="@null"
            android:src="@drawable/toolbar_back_arrow" />

        <com.breadwallet.presenter.customviews.BaseTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:text="@string/vote_title"
            android:textColor="@color/black_333333"
            android:textSize="20sp" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/first_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/white"
        android:elevation="5dp"
        android:translationZ="5dp">

        <TextView
            android:id="@+id/vote_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/black_333333"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            android:text="@string/crc_vote_hint"/>

        <LinearLayout
            android:id="@+id/vote_nodes_tv_layout"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:orientation="horizontal"
            android:layout_marginTop="11dp"
            android:layout_below="@+id/vote_hint">

            <TextView
                android:id="@+id/dpos_vote_nodes_tv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/black_333333"
                android:textSize="14sp"
                android:lines="1"
                android:gravity="center"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:background="@drawable/dpos_vote_shape"
                android:layout_marginLeft="20dp"
                android:text="@string/crc_vote_dpos_nodes"/>

            <View
                android:id="@+id/vote_nodes_block"
                android:layout_width="10dp"
                android:layout_height="match_parent"/>

            <TextView
                android:id="@+id/crc_vote_nodes_tv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/black_333333"
                android:textSize="14sp"
                android:lines="1"
                android:gravity="center"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:background="@drawable/crc_vote_shape"
                android:text="@string/crc_vote_crc_nodes"/>

        </LinearLayout>

        <TextView
            android:id="@+id/votes_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:textColor="@color/black_999999"
            android:textSize="14sp"
            android:layout_below="@+id/vote_nodes_tv_layout"
            android:text="@string/crc_votes"/>

        <TextView
            android:id="@+id/votes_counts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black_333333"
            android:textSize="34sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/votes_unit"
            android:text="0"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/second_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/numbers_detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/black_666666"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:lines="1"
            android:text="@string/crc_members_title"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="20dp"
            android:layout_below="@+id/numbers_detail_title">
            <com.breadwallet.presenter.activities.crc.FlowLayout
                android:id="@+id/numbers_flow_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/view_all_members"
                android:layout_width="56dp"
                android:layout_height="24dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:text="@string/crc_view_all"
                android:background="@drawable/crc_view_all_shape"
                android:textColor="#FF3365"
                android:textSize="11sp"/>
        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/third_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:elevation="5dp"
        android:translationZ="5dp">

        <TextView
            android:id="@+id/dpos_vote_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="19dp"
            android:text="@string/node_list_title"/>

        <com.breadwallet.presenter.customviews.BaseTextView
            android:id="@+id/vote_paste_tv"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:background="@drawable/ic_vote_paste"
            android:layout_alignParentRight="true"
            android:layout_marginRight="27dp"
            android:layout_marginTop="19dp"
            app:layout_constraintTop_toTopOf="@+id/vote_nodes_list_title"
            app:layout_constraintBottom_toBottomOf="@+id/vote_nodes_list_title"/>

        <com.breadwallet.presenter.customviews.MaxHeightLv
            android:id="@+id/dpos_vote_lv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="24dp"
            android:background="@null"
            android:divider="@null"
            android:dividerHeight="5dp"
            android:fadeScrollbars="false"
            android:layout_below="@+id/dpos_vote_title"
            app:maxHeight="200dp" />


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_below="@+id/dpos_vote_lv">

            <View
                android:id="@+id/horizontal_line1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="24dp"
                android:background="#F5F5FA"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.breadwallet.presenter.customviews.RoundImageView
                android:id="@+id/elephant_logo_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/brd_logo_gradient"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/horizontal_line1" />

            <com.breadwallet.presenter.customviews.BaseTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/vote_wallet_balance_title"
                android:textColor="@color/black_999999"
                app:layout_constraintBottom_toBottomOf="@+id/elephant_logo_icon"
                app:layout_constraintLeft_toRightOf="@+id/elephant_logo_icon"
                app:layout_constraintTop_toTopOf="@+id/elephant_logo_icon" />

            <com.breadwallet.presenter.customviews.BaseTextView
                android:id="@+id/vote_ela_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="24dp"
                android:text="@string/vote_balance"
                android:textColor="@color/black_999999"
                app:layout_constraintBottom_toBottomOf="@+id/elephant_logo_icon"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/elephant_logo_icon" />

            <View
                android:id="@+id/horizontal_line2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="24dp"
                android:background="#F5F5FA"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/elephant_logo_icon" />


            <com.breadwallet.presenter.customviews.BRButton
                android:id="@+id/vote_cancle_btn"
                android:layout_width="140dp"
                android:layout_height="54dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="32dp"
                android:text="@string/vote_cancel_btn_txt"
                android:textColor="#ff3365"
                android:textSize="18sp"
                app:buttonType="3"
                app:isBreadButton="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/horizontal_line2" />

            <com.breadwallet.presenter.customviews.BRButton
                android:id="@+id/vote_confirm_btn"
                android:layout_width="140dp"
                android:layout_height="54dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="32dp"
                android:text="@string/vote_confirm_btn_txt"
                android:textColor="#ff3365"
                android:textSize="18sp"
                app:buttonType="6"
                app:isBreadButton="true"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/horizontal_line2" />

        </android.support.constraint.ConstraintLayout>

    </RelativeLayout>

    <com.breadwallet.presenter.customviews.BaseTextView
        android:id="@+id/vote_text_hint1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="16dp"
        android:text="@string/vote_hint"
        android:textColor="@color/black_999999"
        app:layout_constraintTop_toBottomOf="@+id/vote_layout2" />

</LinearLayout>
