<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_height="60dp">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="20dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:background="@null"
            android:src="@drawable/toolbar_back_arrow"/>

        <com.breadwallet.presenter.customviews.BaseTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/multisign_approved_title"
            android:textColor="@color/black_333333"
            android:textSize="20sp"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/multisign_approved"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/multisign_approved"
        android:textColor="@color/black_333333"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.554"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/multisign_pass_or_sent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/multisign_pass_next"
        android:textColor="@color/black_333333"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/txid_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/black_333333"
        android:textSize="16sp"
        android:visibility="gone"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/multisign_pass_or_sent"/>

    <com.breadwallet.presenter.customviews.BRButton
        android:id="@+id/txid_copy_btn"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/txid_copy_tv"
        android:textSize="16sp"
        app:buttonType="8"
        app:isBreadButton="true"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txid_tv"/>

    <ImageView
        android:id="@+id/multisign_qr_iv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toBottomOf="@+id/multisign_pass_or_sent" />

    <TextView
        android:id="@+id/multisign_qr_share_json"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/multisign_share_json"
        android:textColor="@color/create_new_wallet_button_dark"
        android:textSize="12sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/multisign_qr_iv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>
